ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: public
spec:
  template:
    spec:
      containers:
      - name: ui-container
        image: radito3/ss-web-ui:1.0.1
        volumeMounts:
          - name: public-key-volume
            mountPath: "/usr/share/nginx/html/config"
            readOnly: true
      volumes:
        # kubectl create secret generic creds-encryption-key --from-file=public_key.pem -n public
        - name: public-key-volume
          secret:
            secretName: creds-encryption-key
