ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: public
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 80
