ui/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-web-ui-traffic
  namespace: public
spec:
  podSelector:
    matchLabels:
      app: ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 192.168.0.0/16
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: hub
